# AI-Based-Fourier-Analysis

./: README.md  analyzer.py  frequencies.xlsx  pyproject.toml  setup.py
.github/workflows/: python-package.yml
aifourier/: analyzer.py
examples/: example.py  model_bird.h5  spectrum.csv
tests/: test_basic.py
