[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifourier"
version = "2.0.2"
description = "AI-based Fourier Analysis using sinusoidal neural networks"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Jovan" }
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "tensorflow",
    "librosa"
]

[project.urls]
Repository = "https://github.com/jovan-AIcoder/AI-Based-Fourier-Analysis"
Issues = "https://github.com/jovan-AIcoder/AI-Based-Fourier-Analysis/issues"