[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifourier"
version = "3.0.1"
description = "AI-based Fourier Analysis using sinusoidal neural networks"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

authors = [
    { name = "Jovan" }
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "tensorflow",
    "librosa"
]

[project.urls]
Repository = "https://github.com/jovan-AIcoder/AI-Based-Fourier-Analysis"
Issues = "https://github.com/jovan-AIcoder/AI-Based-Fourier-Analysis/issues"